# communication

./: .bazelrc  .clang-tidy  .gitignore  .readthedocs.yaml  BUILD  CONTRIBUTING.md  MODULE.bazel  NOTICE  README.md  SETUP.md  WORKSPACE  fix-visibility-issue.patch  requirements.in  requirements.txt  requirements_lock.txt  wait_free_stack_fix.patch
.devcontainer/: devcontainer.json
.devcontainer/alt_container/: devcontainer.json
.github/: CODEOWNERS  RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bugfix.yml  2-improvement.yml
.github/workflows/: address_undefined_behavior_leak_sanitizer.yml  address_undefined_behavior_sanitizer.yml  automated_release.yml  build_and_test_host.yml  build_and_test_host_gcc.yml  build_and_test_qnx.yml  clippy.yml  coverage_report.yml  release.yml  release_coverage_report.yml  thread_sanitizer.yml
actions/free_disk_space/: action.yml
actions/unblock_user_namespace_for_linux_sandbox/: action.yml  action_callable.sh
bazel/rules/: expand_template.bzl
bazel/toolchains/: BUILD
bazel/toolchains/template/: conf.template.py
bazel/tools/: BUILD  json_schema_validator.bzl  json_schema_validator_test.bzl
docs/sphinx/: BUILD  conf.py  introduction.rst  message_passing.rst
docs/sphinx/utils/: BUILD  README.md  defs.bzl  sphinx_build_flags.bzl
examples/: .bazelrc  BUILD  MODULE.bazel  README.md  com-api-example  ipc_bridge  main.cpp
quality/: coverage.bazelrc
quality/integration_testing/: BUILD  integration_testing.bzl  main.py  pytest.toml  requirements.txt  system_under_test.py
quality/integration_testing/environments/: run_as_exec.bzl
quality/integration_testing/environments/qnx8_qemu/: BUILD  console.py  init_x86_64.build  line_reader.py  qcrypto.conf  qemu.py  qemu_config.json  qemu_runner.py
quality/integration_testing/environments/ubuntu24_04_docker/: BUILD  docker.py  ubuntu24_04.lock.json  ubuntu24_04.yaml
quality/integration_testing/test/: BUILD  main.cpp  main2.cpp  test_hello_world.py
quality/sanitizer/: BUILD  asan.supp  asan_ubsan_lsan.env.template  lsan.supp  sanitizer.bazelrc  sanitizers_functional_test.sh  tsan.env.template  tsan.supp  ubsan.supp  wrapper.sh
quality/sanitizer/constraints/: BUILD
quality/sanitizer/flags/: BUILD
quality/sanitizer/test_workspace/: BUILD.tpl  MODULE.bazel  asan_fail_heap_out_of_bounds.cpp  lsan_fail_leak.cpp  tsan_fail_data_race.cpp
quality/static_analysis/: BUILD  codeql_lint.py  config.yaml  static_analysis.bazelrc
score/message_passing/: BUILD  client_connection.cpp  client_connection.h  client_connection_test.cpp  client_factory.h  client_server_communication.h  common_headers.cpp  engine.h  i_client_connection.h  i_client_factory.h  i_connection_handler.h  i_server.h  i_server_connection.h  i_server_factory.h  i_shared_resource_engine.h  qnx_dispatch_engine_test.cpp  qnx_dispatch_mocked_server_test.cpp  qnx_dispatch_server_test.cpp  qnx_dispatch_server_to_client_test.cpp  qnx_resource_path_test.cpp  resource_manager_fixture_base.h  server_factory.h  server_types.h  service_protocol_config.h  timed_command_queue.cpp  timed_command_queue.h  timed_command_queue_entry.h  timed_command_queue_test.cpp  unix_domain_server_test.cpp  unix_domain_server_to_client_test.cpp
score/message_passing/design/: client-server.md
score/message_passing/log/: BUILD  log.cpp  log.h  log_on_timeout.cpp  log_on_timeout.h  log_on_timeout_test.cpp  log_test.cpp  logging_callback.cpp  logging_callback.h
score/message_passing/mock/: client_connection_mock.h  client_factory_mock.h  mocks.cpp  server_connection_mock.h  server_factory_mock.h  server_mock.h  shared_resource_engine_mock.h
score/message_passing/non_allocating_future/: BUILD  README.md  non_allocating_future.cpp  non_allocating_future.h  non_allocating_future_samples_test.cpp  non_allocating_future_test_samples.cpp  non_allocating_future_test_unit.cpp
score/message_passing/qnx_dispatch/: qnx_dispatch_client_factory.cpp  qnx_dispatch_client_factory.h  qnx_dispatch_engine.cpp  qnx_dispatch_engine.h  qnx_dispatch_server.cpp  qnx_dispatch_server.h  qnx_dispatch_server_factory.cpp  qnx_dispatch_server_factory.h  qnx_resource_path.cpp  qnx_resource_path.h
score/message_passing/unix_domain/: unix_domain_client_factory.cpp  unix_domain_client_factory.h  unix_domain_engine.cpp  unix_domain_engine.h  unix_domain_server.cpp  unix_domain_server.h  unix_domain_server_factory.cpp  unix_domain_server_factory.h  unix_domain_socket_address.h
score/mw/: BUILD  common_features.bzl
score/mw/com/: .clang-tidy-extra  BUILD  README.md  SUPPORT.md  com_error_domain.cpp  com_error_domain.h  runtime.cpp  runtime.h  runtime_configuration.cpp  runtime_configuration.h  runtime_configuration_test.cpp  runtime_test.cpp  test_types.cpp  test_types.h  types.cpp  types.h  types_accessibility_test.cpp  types_test.cpp
score/mw/com/benchmark/: BUILD  benchmark.cpp  benchmark.h
score/mw/com/design/: README.md  codeinspectionchecklists.md
score/mw/com/doc/: User_Facing_API_Examples.md  error_handling_guide.md  requirements_model.rsl  user_facing_API_examples.md
score/mw/com/flags/: BUILD
score/mw/com/impl/: BUILD  binding_type.cpp  binding_type.h  com_error.cpp  com_error.h  com_error_test.cpp  data_type_meta_info.cpp  data_type_meta_info.h  enriched_instance_identifier.cpp  enriched_instance_identifier.h  enriched_instance_identifier_test.cpp  error_serializer.cpp  error_serializer.h  error_serializer_test.cpp  event_receive_handler.cpp  event_receive_handler.h  find_service_handle.cpp  find_service_handle.h  find_service_handle_test.cpp  find_service_handler.cpp  find_service_handler.h  flag_owner.cpp  flag_owner.h  flag_owner_test.cpp  generic_proxy.cpp  generic_proxy.h  generic_proxy_event.cpp  generic_proxy_event.h  generic_proxy_event_binding.cpp  generic_proxy_event_binding.h  generic_proxy_event_test.cpp  generic_proxy_method.cpp  generic_proxy_method.h  generic_proxy_method_test.cpp  (+123 more)
score/mw/service/: BUILD  provided_service.h  provided_service_container.h  proxy_future.h  proxy_needs.h  proxy_needs_factory.h
tools/lint/: linters.bzl
(+1718 files in other folders)
