# *******************************************************************************
# Copyright (c) 2024-2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(name = "communication")

bazel_dep(name = "platforms", version = "0.0.11")

include("//third_party/host_gcc:host_gcc.MODULE.bazel")

include("//third_party/host_llvm:host_llvm.MODULE.bazel")

bazel_dep(name = "aspect_rules_lint", version = "1.10.2")
bazel_dep(name = "googletest", version = "1.15.0")
bazel_dep(name = "google_benchmark", version = "1.9.1")
bazel_dep(name = "rules_rust", version = "0.61.0")
bazel_dep(name = "buildifier_prebuilt", version = "6.3.3")
bazel_dep(name = "score_crates", version = "0.0.2", repo_name = "crate_index")
bazel_dep(name = "boost.program_options", version = "1.87.0")
bazel_dep(name = "download_utils", version = "1.0.1")

download_archive = use_repo_rule("@download_utils//download/archive:defs.bzl", "download_archive")

download_archive(
    name = "json_schema_validator",
    build = "//third_party/json_schema_validator:json_schema_validator.BUILD",
    strip_prefix = "json-schema-validator-2.1.0",
    urls = ["https://github.com/pboettch/json-schema-validator/archive/refs/tags/2.1.0.tar.gz"],
)

download_archive(
    name = "jsonschema",
    build = "//third_party/jsonschema:jsonschema.BUILD",
    strip_prefix = "jsonschema-4.23.0",
    urls = ["https://github.com/python-jsonschema/jsonschema/archive/refs/tags/v4.23.0.tar.gz"],
)

bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_doxygen", version = "2.5.0")
bazel_dep(name = "score_baselibs", version = "0.2.0")
git_override(
    module_name = "score_baselibs",
    commit = "de5bb275ee9957433b3587582ac07d3eeb98dd6a",
    patch_strip = 1,
    patches = [
        "//:wait_free_stack_fix.patch",
    ],
    remote = "https://github.com/eclipse-score/baselibs.git",
)

# Doxygen extension for documentation generation
doxygen_extension = use_extension("@rules_doxygen//:extensions.bzl", "doxygen_extension")
use_repo(doxygen_extension, "doxygen")

# Python 3.12 toolchain for Bazel (required for LOBSTER/TRLC dependencies)
bazel_dep(name = "rules_python", version = "0.32.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
)

# Python pip dependencies for traceability tools
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "communication_pip",
    python_version = "3.12",
    requirements_lock = "//third_party/python:requirements.txt",
)
use_repo(pip, "communication_pip")

# TRLC dependency for requirements traceability
bazel_dep(name = "trlc", version = "0.0.0")
git_override(
    module_name = "trlc",
    commit = "650b51a47264a4f232b3341f473527710fc32669",  # trlc-2.0.2 release
    remote = "https://github.com/bmw-software-engineering/trlc.git",
)

lobster_ext = use_extension("//third_party/lobster:lobster.bzl", "lobster_ext")
use_repo(lobster_ext, "lobster")

# Use lobster's upstream requirements.txt directly for this module's Python hub
pip.parse(
    hub_name = "lobster_dependencies",
    python_version = "3.12",
    requirements_lock = "@lobster//:requirements.txt",
)
use_repo(pip, "lobster_dependencies")
