bazel_dep(name = "score_communication", version = "0.0.0")
local_path_override(
    module_name = "score_communication",
    path = "..",
)

bazel_dep(name = "rules_cc", version = "0.1.5")
bazel_dep(name = "score_baselibs", version = "0.2.5")
bazel_dep(name = "score_logging", version = "0.1.0")

# TODO: Remove once new logging release is available https://github.com/eclipse-score/logging/issues/80
git_override(
    module_name = "score_logging",
    commit = "38e8762881d512c89ae5c2e5e5238fd791d327df",
    remote = "https://github.com/eclipse-score/logging.git",
)
