bazel_dep(name = "score_communication", version = "0.0.0")
local_path_override(
    module_name = "score_communication",
    path = "..",
)

bazel_dep(name = "rules_cc", version = "0.1.5")
bazel_dep(name = "score_baselibs", version = "0.2.5")
git_override(
    module_name = "score_baselibs",
    commit = "69bd8297dc5de97db3362d8ea1da634883e7c27a",
    remote = "https://github.com/eclipse-score/baselibs.git",
)
